[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/spritesheet_enemies.png" type="Texture" id=1]
[ext_resource path="res://Character/GroundEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.000471649, 0.000714885 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DetectionArea:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.00188659, 0.000455582 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 208, 128 )

[sub_resource type="CircleShape2D" id=5]
radius = 20.3961

[node name="GroundEnemy" type="KinematicBody2D"]
collision_layer = 2048
collision_mask = 17
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0, 0, 1, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 144, 0 )
shape = SubResource( 4 )

[node name="AttackAArea" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 8200

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAArea"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 5 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
